--- a/src/app/skillset/skillset.component.scss
+++ b/src/app/skillset/skillset.component.scss
@@ -67,7 +67,7 @@ h2 {
 
 @media (min-width: 768px) {
   .skillset-section {
-    padding: 150px 50px;
+    padding: 150px 0;
   }
 
   .skill-set-icons {
