adding about me component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-hero-section></app-hero-section>
+<app-about-me></app-about-me>
 <app-skillset></app-skillset>
 <app-projects></app-projects>
 <app-references ngSkipHydration></app-references>
