adding new ellipes to project section

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,6 +2,8 @@
   <div class="ellipse ellipse1"></div>
   <div class="ellipse ellipse2"></div>
   <div class="ellipse ellipse3"></div>
+  <div class="ellipse ellipse4"></div>
+  <div class="ellipse ellipse5"></div>
 
   <div class="projects-content">
     <h2 class="title-my-work">My work</h2>
