--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -216,3 +216,17 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.ellipse4 {
+  width: 350px;
+  height: 350px;
+  top: 25%;
+  right: -100px;
+}
+
+.ellipse5 {
+  width: 280px;
+  height: 280px;
+  top: 65%;
+  left: -50px;
+}
