--- a/src/app/skillset/skillset.component.scss
+++ b/src/app/skillset/skillset.component.scss
@@ -18,7 +18,7 @@
 h2 {
   font-family: "Baloo 2", cursive;
   color: #ffffff;
-  font-size: clamp(48px, 8vw, 96px);
+  font-size: var(--fs-h1);
   border-bottom: none;
   padding-bottom: 0;
   margin-bottom: 40px;
@@ -50,6 +50,7 @@ h2 {
   gap: 10px;
 
   .icon-name {
+    font-size: var(--fs-body);
     color: white;
     font-family: "Montserrat", sans-serif;
   }
