adding padding to scroll bar

--- a/src/app/hero-section/hero-section.component.scss
+++ b/src/app/hero-section/hero-section.component.scss
@@ -161,7 +161,7 @@
     right: 0; /* Changed from 40px */
     bottom: 0;
     align-items: flex-end;
-    gap: 40px;
+    gap: 240px; /* Adjusted gap */
     pointer-events: none;
   }
 
