--- a/src/app/hero-section/hero-section.component.scss
+++ b/src/app/hero-section/hero-section.component.scss
@@ -19,7 +19,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  min-height: 100vh;
+  justify-content: space-between;
+  box-sizing: border-box;
 }
 
 .hero-left,
